# hail

./: .env.example  .gitignore  README.md  README_CLASSIC_MAIN.md  README_MAIN.md  README_PO.md  hail.sh  hail_po.sh  pyproject.toml  test_binance_subscriptions.py
src/hail/: __init__.py  binance_feed.py  claim_test.py  config.py  db.py  engine.py  logging_utils.py  main.py  models.py  place_once_db.py  place_once_engine.py  place_once_main.py  place_once_models.py  polymarket_gamma.py  polymarket_trader.py  polymarket_ws.py  strategy.py  telegram_notifier.py
src/hail/po/: __init__.py  claim_now.py  claim_relayer_now.py  db.py  engine.py  main.py  models.py
