[project]
name = "hail"
version = "0.1.0"
description = "Automated Polymarket short-horizon trader"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "aiosqlite>=0.21.0",
  "httpx>=0.28.1",
  "pydantic>=2.11.7",
  "pydantic-settings>=2.10.1",
  "py-clob-client>=0.34.5",
  "python-dotenv>=1.1.1",
  "websockets>=15.0.1",
  "web3>=7.14.1",
  "py-builder-relayer-client>=0.0.1",
  "py-builder-signing-sdk>=0.0.2",
]

[project.scripts]
hail = "hail.po.main:main"
hail-po = "hail.po.main:main"
hail-main = "hail.main:main"
hail-claim-test = "hail.claim_test:main"
hail-po-claim-now = "hail.po.claim_now:main"
hail-po-claim-relay-now = "hail.po.claim_relayer_now:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hail"]
